[workspace]
resolver = "3"
members = [
    "vulkan-headers",
    "vulkan-headers-generator",
    "vulkan-registry",
]

[workspace.package]
version = "0.1.2+vulkan-1.4.337"
repository = "https://github.com/jbatez/vulkan-headers-rs"
keywords = [
    "gamedev",
    "graphics",
    "vulkan",
    "headers",
    "bindings",
]
categories = [
    "api-bindings",
    "external-ffi-bindings",
    "game-development",
    "graphics",
    "rendering::graphics-api",
]

[workspace.dependencies]
vulkan-registry = { path = "vulkan-registry", version = "0.1.2" }
