[package]
name = "vulkan-headers"
version.workspace = true
edition = "2024"
rust-version = "1.85.0"
description = "Minimalist Rust FFI bindings for Vulkan"
repository.workspace = true
license = "MIT-0"
keywords.workspace = true
categories.workspace = true

[features]
exported_prototypes = []
prototypes = ["exported_prototypes"]

android_extensions = []
beta_extensions = []
directfb_extensions = []
fuchsia_extensions = []
ggp_extensions = []
ios_extensions = []
macos_extensions = []
metal_extensions = []
ohos_extensions = []
screen_extensions = []
vi_extensions = []
wayland_extensions = []
win32_extensions = []
xcb_extensions = []
xlib_extensions = []
xlib_xrandr_extensions = []
