[package]
name = "vulkan-headers"
version.workspace = true
edition = "2024"
rust-version = "1.85.0"
description = "Minimalist Rust FFI bindings for Vulkan"
repository.workspace = true
license = "MIT-0"
keywords.workspace = true
categories.workspace = true

[features]
exported-prototypes = []
prototypes = ["exported-prototypes"]

android-extensions = []
beta-extensions = []
directfb-extensions = []
fuchsia-extensions = []
ggp-extensions = []
ios-extensions = []
macos-extensions = []
metal-extensions = []
ohos-extensions = []
screen-extensions = []
vi-extensions = []
wayland-extensions = []
win32-extensions = []
xcb-extensions = []
xlib-extensions = []
xlib_xrandr-extensions = []
